[gd_scene load_steps=8 format=3 uid="uid://dqq361rv5pvup"]

[ext_resource type="Script" path="res://Scenes/Turrets/Spore Sprayer/spore_spray_projectile.gd" id="1_np8po"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cdm4g"]
transparency = 2
alpha_scissor_threshold = 1.0
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(1, 0.713726, 0, 1)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_kgsi4"]
emission_shape = 1
emission_sphere_radius = 0.2
spread = 180.0
flatness = 1.0
initial_velocity_min = 2.0
initial_velocity_max = 5.0
gravity = Vector3(0, 0, 0)
turbulence_noise_strength = 6.9
turbulence_noise_scale = 2.855

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ppqbg"]
albedo_color = Color(0, 1, 0, 1)

[sub_resource type="SphereMesh" id="SphereMesh_ejotp"]
material = SubResource("StandardMaterial3D_ppqbg")
radius = 0.02
height = 0.04
radial_segments = 16
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g1r6e"]
transparency = 2
alpha_scissor_threshold = 1.0
alpha_antialiasing_mode = 0
cull_mode = 2
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_color = Color(0.568627, 0.443137, 0.345098, 1)

[sub_resource type="CylinderShape3D" id="CylinderShape3D_l812j"]
height = 1.0
radius = 2.3

[node name="SporeSprayerProjectile" type="Area3D" groups=["AOE"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_np8po")

[node name="SporeSpray" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_cdm4g")
emitting = false
amount = 250
lifetime = 0.4
speed_scale = 0.5
fixed_fps = 60
collision_base_size = 128.0
process_material = SubResource("ParticleProcessMaterial_kgsi4")
draw_pass_1 = SubResource("SphereMesh_ejotp")

[node name="SporeSpray2" type="GPUParticles3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.00857663, 0)
material_override = SubResource("StandardMaterial3D_g1r6e")
emitting = false
amount = 250
lifetime = 0.4
speed_scale = 0.5
fixed_fps = 60
trail_lifetime = 10.0
process_material = SubResource("ParticleProcessMaterial_kgsi4")
draw_pass_1 = SubResource("SphereMesh_ejotp")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.1, 0)
shape = SubResource("CylinderShape3D_l812j")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
